--- a/giao0o/.github/workflows/github-actions-demo.yml
+++ b/giao0o/.github/workflows/github-actions-demo.yml
@@ -1,1 +1,23 @@
+name: Run action
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  run-action:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+
+    - name: Check Python version
+      run: python --version
 
